2003-08-13  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-flow-holder-inlines.c

	Optimised line regeneration by amortising all ops into one when an end_edit occurs, if a regenreation is requested within a doc edit.
	
	* cong-document.h

	Fixed a missing end-of-comment
	
	* cong-document.c

	Merged some selection notifications

2003-08-12  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-document.c, cong-document.h, cong-location.c, cong-node.h, global.h, select.c, tree.c, xmldata.c

	Added debug checking, and hooks to handle cursor and selection locations when things get edited
	
2003-08-12  Jeff Martin <jeff@custommonkey.org>

	* cong-menus.c

	Fixed a C99-ism

2003-08-11  David Malcolm <david@davemalcolm.demon.co.uk>

	* popup.c

	Added some simple test routines to the tree popups; disabled in default state.

2003-08-09  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-document.c, cong-document.h, cong-node.h, tree.c, xmldata.c, xmledit.c, cong-menus.c

	Added utilities for merging text, and for parsing fragments of XML, and inserting them into the document, together with a test routine in the debugging menu.

	* cong-editor-area-flow-holder-inlines.c

	Added some debug code

	* cong-editor-child-policy.h, cong-editor-node.c, cong-editor-node.h, cong-editor-widget.h, cong-editor-widget3.c

	CongEditorNodes now store their child policies and parent child policies, rather than it being stored in hash tables in the CongEditorWidget3

2003-08-08  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-widget3.c, plugin-paragraph-area-paragraph.c

	Fixed some build breakage
	
	* cong-editor-area-border.c, cong-editor-area-border.h, cong-editor-area-flow-holder-blocks.c

	Spacing improvements in new widget

	* cong-span-text-editor.c

	Added some begin/end edit pairs

2003-08-07  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-structural-tag.c

	Support for folding structural elements in new widget
